--- a/app/about-sapta-tours.html
+++ b/app/about-sapta-tours.html
@@ -87,31 +87,39 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="document-page document-insurance p-t-70">
+    <div class="document-page about-page p-t-70">
       <div class="banner">
-        <h2 class="head-title text-white text-center">Visa &amp; Documents</h2>
+        <h2 class="head-title text-white text-center">About Sapta Tour</h2>
       </div>
       <div class="wrapping-gray"></div>
       <div class="container display-table">
         <div class="content-left display-cell b-r">
           <article class="m-b-xl">
-            <h3 class="text-rounded m-b-xl">Travel&nbsp;<span class="text-yellow">Insurance</span></h3>
-            <p>Produk asuransi perjalanan kami telah dikembangkan untuk memberikan Anda ketenangan selama melakukan perjalanan. AXA melihat bahwa orang-orang bepergian untuk tujuan yang berbeda-beda, Ada yang untuk berlibur bersama keluarga, untuk ketenangan selama mereka belajar; untuk pertemuan bisnis, untuk permainan golf; atau kombinasi dari semuanya. Dengan polis kami yang telah dirancang dengan hati-hati, kami yakin polis ini akan memenuhi kebutuhan asuransi perjalanan Anda. Dimanapun tujuan perjalanan anda, SmartTraveller akan memberikan penutupan asuransi yang lengkap untuk melindungi anda dan keluarga. Ada beberapa plan yang dapat anda pilih sesuai dengan kebutuhan asuransi perjalanan anda:</p>
-            <ul class="list-unstyled m-b-xl">
-              <li>Spesial Asia</li>
-              <li>Seluruh Dunia – Gold</li>
-              <li>Seluruh Dunia – Platinum</li>
-              <li>Anda juga dapat memilih untuk mendapatkan perlindungan satu perjalanan saja atau sepanjang tahun.</li>
-            </ul>
-            <div class="subtitle-article text-u-c f-bold text-lg">Jasa bantuan</div>
-            <p>Sebagai nasabah SmartTraveller, Anda secara langsung menjadi anggota Global Assistance & Healthcare selama melakukan perjalanan. Sebagai Medical Assistance provider yang berpengalaman dalam memberikan pelayanan dan bantuan kesehatan, Global Assistance & Healthcare memiliki representative di lebih dari 70 negara di dunia. Global Assistance & Healthcare memiliki tim medis yang terdedikasi untuk memberikan bantuan medis darurat maupunjasa konsultasi medis. Global Assistance & Healthcare sangat mudah dihubungi. Kapan dan dimana saja Anda membutuhkan pertolongan, bantuan diberikan dengan cepat dan profesional. Sebagai tambahan, layanan bantuan 24 jam per hari - 365 hari per tahun telah didedikasikan untuk melayani nasabah SmartTraveller. Saat Anda di luar negeri dan terjadi masalah kesehatan DARURAT yang dijamin dalam polls SmartTraveller, silahkan hubungi nomor 24-hours Alarm Centre untuk mendapatkan jasa bantuan dan saran medis. Jangan lupa untuk menyebutkan nomor sertifikat, nama lengkap dan agen perjalanan Anda.</p>
+            <h3 class="text-rounded m-b-xl">Our&nbsp;<span class="text-yellow">Background</span></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint &nbsp;<a href="#">occaecat cupidatat</a> non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p><img src="img/sapta-tours-about.jpg" alt=""></p>
+            <h3 class="text-rounded m-b-xl">Key&nbsp;<span class="text-yellow">Facts</span></h3>
+            <p><strong class="f-bold">History</strong></p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+            <p><strong class="f-bold">Vision & Mission</strong></p>
+            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
+            <p><strong class="f-bold">Who We Work With</strong></p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+            <p class="text-primary"><strong>At vero oset accusamus</strong></p>
+            <p>Et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+            <p class="text-primary"><strong>Similique sunt in culpa</strong></p>
+            <p>Qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
           </article>
+          <div class="wrapper-xl b-dashed-t-gray"></div>
         </div>
         <div class="aside display-cell">
+          <h4 class="text-rounded m-b-xl">Useful Links</h4>
           <ul class="list-unstyled">
-            <li><a href="document.html">Visa</a></li>
-            <li><a href="document-passport.html">Passport</a></li>
-            <li><a href="document-insurance.html" class="active">Travel Insurance</a></li>
+            <li><a href="document.html" class="active">About Sapta Tour</a></li>
+            <li><a href="document-passport.html">Frequently Asked Questions</a></li>
+            <li><a href="document-insurance.html">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Career</a></li>
           </ul>
         </div>
       </div>
