--- a/app/document-passport.html
+++ b/app/document-passport.html
@@ -91,40 +91,39 @@
       <div class="banner">
         <h2 class="head-title text-white text-center">Visa &amp; Documents</h2>
       </div>
-      <div class="wrapping-gray">
-        <div class="container display-table">
-          <div class="content-left display-cell b-r">
-            <article class="m-b-xl">
-              <h3 class="text-rounded m-b-xl">Dokumen&nbsp;<span class="text-yellow">Passport</span></h3>
-              <div class="subtitle-article text-u-c f-bold text-lg">Persyaratan Paspor Republik Indonesia</div>
-              <ol>
-                <li>Asli</li>
-                <li>Kartu Keluarga</li>
-                <li>Akte Lahir</li>
-                <li>Ijazah</li>
-                <li>Surat Nikah (apabila sudah menikah)</li>
-                <li>Surat Sponsor (apabila bekerja)</li>
-                <li>Biaya Rp 650.000, waktu pengerjaan ± 14 Hari Kerja</li>
-              </ol>
-              <div class="subtitle-article text-u-c f-bold text-lg">Persyaratan Paspor Republik Indonesia Untuk Anak (Belum memiliki KTP)</div>
-              <ol>
-                <li>KTP Kedua Orang tua</li>
-                <li>Kartu Keluarga</li>
-                <li>Akte Lahir</li>
-                <li>Fotocopy Paspor Bapak / Ibu</li>
-                <li>Surat izin dari orang tua dengan materai Rp 6000</li>
-                <li>Surat Nikah Orang Tua</li>
-                <li>Biaya Rp 750.000, waktu pengerjaan ± 14 Hari Kerja</li>
-              </ol>
-            </article>
-          </div>
-          <div class="aside display-cell">
-            <ul class="list-unstyled">
-              <li><a href="document.html">Visa</a></li>
-              <li><a href="document-passport.html" class="active">Passport</a></li>
-              <li><a href="document-insurance.html">Travel Insurance</a></li>
-            </ul>
-          </div>
+      <div class="wrapping-gray"></div>
+      <div class="container display-table">
+        <div class="content-left display-cell b-r">
+          <article class="m-b-xl">
+            <h3 class="text-rounded m-b-xl">Dokumen&nbsp;<span class="text-yellow">Passport</span></h3>
+            <div class="subtitle-article text-u-c f-bold text-lg">Persyaratan Paspor Republik Indonesia</div>
+            <ol>
+              <li>Asli</li>
+              <li>Kartu Keluarga</li>
+              <li>Akte Lahir</li>
+              <li>Ijazah</li>
+              <li>Surat Nikah (apabila sudah menikah)</li>
+              <li>Surat Sponsor (apabila bekerja)</li>
+              <li>Biaya Rp 650.000, waktu pengerjaan ± 14 Hari Kerja</li>
+            </ol>
+            <div class="subtitle-article text-u-c f-bold text-lg">Persyaratan Paspor Republik Indonesia Untuk Anak (Belum memiliki KTP)</div>
+            <ol>
+              <li>KTP Kedua Orang tua</li>
+              <li>Kartu Keluarga</li>
+              <li>Akte Lahir</li>
+              <li>Fotocopy Paspor Bapak / Ibu</li>
+              <li>Surat izin dari orang tua dengan materai Rp 6000</li>
+              <li>Surat Nikah Orang Tua</li>
+              <li>Biaya Rp 750.000, waktu pengerjaan ± 14 Hari Kerja</li>
+            </ol>
+          </article>
+        </div>
+        <div class="aside display-cell">
+          <ul class="list-unstyled">
+            <li><a href="document.html">Visa</a></li>
+            <li><a href="document-passport.html" class="active">Passport</a></li>
+            <li><a href="document-insurance.html">Travel Insurance</a></li>
+          </ul>
         </div>
       </div>
     </div>
