--- a/app/document.html
+++ b/app/document.html
@@ -91,85 +91,84 @@
       <div class="banner">
         <h2 class="head-title text-white text-center">Visa &amp; Documents</h2>
       </div>
-      <div class="wrapping-gray">
-        <div class="container display-table">
-          <div class="content-left display-cell b-r">
-            <article>
-              <h3 class="text-rounded m-b-xl">Apa Itu&nbsp;<span class="text-yellow">Visa</span></h3>
-              <p>Visa adalah sebuah dokumen resmi yang Anda perlukan untuk masuk ke negara tujuan dalam periode waktu tertentu. Visa asli yang biasanya di stempel di paspor penerima sangat diperlukan jika Anda hendak berkunjung ke suatu negara tertentu.</p>
-              <p>Harap diperhatikan bahwa Visa kedatangan hanya dapat diperpanjang atas persetujuan Direktur Jenderal Imigrasi Republik Indonesia dalam hal bencana alam, sakit atau kecelakaan, tidak dapat dialihkan ke jenis visa lain. Pelancong yang melewati waktu yang telah ditentukan akan dikenakan denda sebesar US $ 20.- per hari / orang (untuk tinggal di bawah 60 hari) sedangkan lebih dari 60 hari tinggal akan menjalani 5 (lima) tahun hukuman penjara atau denda IDR 25.000.000 (mata uang lokal).</p>
-              <h5 class="text-u-c f-bold font-lg">Syarat-syarat visa</h5>
-              <p>Berikut beberapa syarat visa negara-negara tujuan wisata, bisnis maupun kebutuhan lainnya, Persyaratan visa dapat berubah sewaktu- waktu / bertambah sesuai dengan permintaan Kedutaan.</p>
-            </article>
-            <div class="flags-list row m-b-xl">
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/austria.png" alt=""><span class="inline f-bold m-l-md text-md">Austria</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/belanda.png" alt=""><span class="inline f-bold m-l-md text-md">Belanda</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/belgia.png" alt=""><span class="inline f-bold m-l-md text-md">Belgia</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/inggris.png" alt=""><span class="inline f-bold m-l-md text-md">Inggris</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/china.png" alt=""><span class="inline f-bold m-l-md text-md">China</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/denmark.png" alt=""><span class="inline f-bold m-l-md text-md">Denmark</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/finland.png" alt=""><span class="inline f-bold m-l-md text-md">Finland</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/france.png" alt=""><span class="inline f-bold m-l-md text-md">France</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/germany.png" alt=""><span class="inline f-bold m-l-md text-md">Germany</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/greece.png" alt=""><span class="inline f-bold m-l-md text-md">Greece</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/hungary.png" alt=""><span class="inline f-bold m-l-md text-md">Hungary</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/italy.png" alt=""><span class="inline f-bold m-l-md text-md">Italy</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/norway.png" alt=""><span class="inline f-bold m-l-md text-md">Norway</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/polandia.png" alt=""><span class="inline f-bold m-l-md text-md">Polandi</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/portugal.png" alt=""><span class="inline f-bold m-l-md text-md">Portugal</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/slovakia.png" alt=""><span class="inline f-bold m-l-md text-md">Slovakia</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/spanyol.png" alt=""><span class="inline f-bold m-l-md text-md">Spanyol</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/swedia.png" alt=""><span class="inline f-bold m-l-md text-md">Swedia</span></div>
-              </div>
-              <div class="col-md-4 m-b-md">
-                <div class="flag-item"><img src="img/flag/swiss.png" alt=""><span class="inline f-bold m-l-md text-md">Swiss</span></div>
-              </div>
+      <div class="wrapping-gray"></div>
+      <div class="container display-table">
+        <div class="content-left display-cell b-r">
+          <article>
+            <h3 class="text-rounded m-b-xl">Apa Itu&nbsp;<span class="text-yellow">Visa</span></h3>
+            <p>Visa adalah sebuah dokumen resmi yang Anda perlukan untuk masuk ke negara tujuan dalam periode waktu tertentu. Visa asli yang biasanya di stempel di paspor penerima sangat diperlukan jika Anda hendak berkunjung ke suatu negara tertentu.</p>
+            <p>Harap diperhatikan bahwa Visa kedatangan hanya dapat diperpanjang atas persetujuan Direktur Jenderal Imigrasi Republik Indonesia dalam hal bencana alam, sakit atau kecelakaan, tidak dapat dialihkan ke jenis visa lain. Pelancong yang melewati waktu yang telah ditentukan akan dikenakan denda sebesar US $ 20.- per hari / orang (untuk tinggal di bawah 60 hari) sedangkan lebih dari 60 hari tinggal akan menjalani 5 (lima) tahun hukuman penjara atau denda IDR 25.000.000 (mata uang lokal).</p>
+            <h5 class="text-u-c f-bold font-lg">Syarat-syarat visa</h5>
+            <p>Berikut beberapa syarat visa negara-negara tujuan wisata, bisnis maupun kebutuhan lainnya, Persyaratan visa dapat berubah sewaktu- waktu / bertambah sesuai dengan permintaan Kedutaan.</p>
+          </article>
+          <div class="flags-list row m-b-xl">
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/austria.png" alt=""><span class="inline f-bold m-l-md text-md">Austria</span></div>
             </div>
-            <div class="clearfix"></div>
-            <div class="m-b-xl"></div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/belanda.png" alt=""><span class="inline f-bold m-l-md text-md">Belanda</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/belgia.png" alt=""><span class="inline f-bold m-l-md text-md">Belgia</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/inggris.png" alt=""><span class="inline f-bold m-l-md text-md">Inggris</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/china.png" alt=""><span class="inline f-bold m-l-md text-md">China</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/denmark.png" alt=""><span class="inline f-bold m-l-md text-md">Denmark</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/finland.png" alt=""><span class="inline f-bold m-l-md text-md">Finland</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/france.png" alt=""><span class="inline f-bold m-l-md text-md">France</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/germany.png" alt=""><span class="inline f-bold m-l-md text-md">Germany</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/greece.png" alt=""><span class="inline f-bold m-l-md text-md">Greece</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/hungary.png" alt=""><span class="inline f-bold m-l-md text-md">Hungary</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/italy.png" alt=""><span class="inline f-bold m-l-md text-md">Italy</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/norway.png" alt=""><span class="inline f-bold m-l-md text-md">Norway</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/polandia.png" alt=""><span class="inline f-bold m-l-md text-md">Polandi</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/portugal.png" alt=""><span class="inline f-bold m-l-md text-md">Portugal</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/slovakia.png" alt=""><span class="inline f-bold m-l-md text-md">Slovakia</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/spanyol.png" alt=""><span class="inline f-bold m-l-md text-md">Spanyol</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/swedia.png" alt=""><span class="inline f-bold m-l-md text-md">Swedia</span></div>
+            </div>
+            <div class="col-md-4 m-b-md">
+              <div class="flag-item"><img src="img/flag/swiss.png" alt=""><span class="inline f-bold m-l-md text-md">Swiss</span></div>
+            </div>
           </div>
-          <div class="aside display-cell">
-            <ul class="list-unstyled">
-              <li><a href="document.html" class="active">Visa</a></li>
-              <li><a href="document-passport.html">Passport</a></li>
-              <li><a href="document-insurance.html">Travel Insurance</a></li>
-            </ul>
-          </div>
+          <div class="clearfix"></div>
+          <div class="m-b-xl"></div>
+        </div>
+        <div class="aside display-cell">
+          <ul class="list-unstyled">
+            <li><a href="document.html" class="active">Visa</a></li>
+            <li><a href="document-passport.html">Passport</a></li>
+            <li><a href="document-insurance.html">Travel Insurance</a></li>
+          </ul>
         </div>
       </div>
     </div>
