--- a/app/email-template-1.html
+++ b/app/email-template-1.html
@@ -37,7 +37,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <table width="100%" cellpadding="0" cellspacing="0" class="b-full tabel-content">
+                      <table width="100%" cellpadding="0" cellspacing="0" class="b-t b-r b-l tabel-content">
                         <tr>
                           <td class="flight-number va-middle">
                             <label class="block">FLIGHT</label><span class="block">DJ7532</span>
