create e-ticket template with css inline

--- a/app/e-ticket.html
+++ b/app/e-ticket.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>E-ticket</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/e-ticket.css" rel="stylesheet">
     <script src="js/libs/modernizr.custom.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries--><!--[if lt IE 9]>
@@ -107,7 +106,7 @@
         <h3 class="subtitle text-rounded">Passenger Details</h3>
         <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered">
           <tr>
-            <td>
+            <td class="count">
               <div class="count-number f-bold">01</div>
             </td>
             <td class="adult">
@@ -127,7 +126,7 @@
             </td>
           </tr>
           <tr>
-            <td>
+            <td class="count">
               <div class="count-number f-bold">02</div>
             </td>
             <td class="adult">
