custom destinations form for mobile version

--- a/app/custom-destinations.html
+++ b/app/custom-destinations.html
@@ -99,7 +99,7 @@
           <p>We’ve compiled <strong class="f-bold">8 questions</strong> to aid in discovering your preferences. We will then work out a custom destination for you and contact you via phone or email</p>
         </article>
       </div>
-      <form method="GET" action="custom-destinations.html" class="sapta-form user-profile m-t">
+      <form method="GET" action="custom-destinations.html" class="sapta-form m-t">
         <h3 class="title-box m-b-none m-t-lg m-b-lg">Contact<span class="text-orange"> Details</span></h3>
         <div class="contact-details m-b-lg b-dashed-b-gray">
           <div class="form-group pull-left m-r">
