--- a/app/mobile/hotels.html
+++ b/app/mobile/hotels.html
@@ -41,7 +41,7 @@
           <li class="access-menu"><a href="/mobile/my-passenger-list.html"><span class="inline">Passenger List</span></a></li>
         </ul>
         <ul class="list-style">
-          <li><a href="/mobile/blog.html"><span class="inline">About</span></a></li>
+          <li><a href="/mobile/about-sapta-tours.html"><span class="inline">About</span></a></li>
           <li><a href="/mobile/blog.html"><span class="inline">FAQ</span></a></li>
           <li><a href="/mobile/blog.html"><span class="inline">Contact Us</span></a></li>
         </ul>
