page show hotel room prices

--- a/app/mobile/find-tours.html
+++ b/app/mobile/find-tours.html
@@ -19,7 +19,7 @@
   <body class="mobile">
     <div id="container">
       <div id="main-wrap" class="form-pencarian pos-rlt">
-        <form id="formFindFlight" method="GET" action="mobile/tours-results.html" class="form-find sapta-form">
+        <form id="formFindFlight" method="GET" action="mobile/index.html" class="form-find sapta-form">
           <h4 class="text-u-c title-search text-center m-b-lg">Find Tours<a href="/mobile" class="close">Close</a></h4>
           <div class="form-group">
             <div class="boxing selectbox b m-b-sm pos-rlt">
