--- a/app/mobile/hotel-detail.html
+++ b/app/mobile/hotel-detail.html
@@ -192,7 +192,7 @@
             </div>
           </div>
           <div class="show-price-block pad10 b-b b-t">
-            <form id="showTourPrice" action="">
+            <form id="showTourPrice" action="mobile/hotel-show-prices.html">
               <div class="block m-b-sm check-in bg-white"><i class="ico ico-calendar"></i>
                 <div class="date in">
                   <label>Check In:&nbsp;</label><span> 19 Feb</span>
