--- a/app/mobile/hotel-results.html
+++ b/app/mobile/hotel-results.html
@@ -78,9 +78,9 @@
           </div>
           <div class="hotel-result-items">
             <div class="hotel-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/hotel03.jpg" alt=""></figure>
-              <div class="hotel-meta pull-left">
-                <div class="hotel-name f-bold text-u-c">Mulia Resort Nusa Dua</div>
+              <figure class="hotel-picture pull-left"><a href="mobile/hotel-detail.html"><img src="img/destinations/hotel03.jpg" alt=""></a></figure>
+              <div class="hotel-meta pull-left"><a href="mobile/hotel-detail.html">
+                  <div class="hotel-name f-bold text-u-c">Mulia Resort Nusa Dua</div></a>
                 <div class="info-extra"><span class="locationan inline m-r-sm pull-left text-u-c">Nusa Dua/Benoa</span><span class="hotel-rating b-l bg-white pull-left"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span>
                   <div class="clearfix"></div>
                 </div>
@@ -92,9 +92,9 @@
               <div class="clearfix"></div>
             </div>
             <div class="hotel-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/hotel02.jpg" alt=""></figure>
-              <div class="hotel-meta pull-left">
-                <div class="hotel-name f-bold text-u-c">W RETREAT & SPA BALI</div>
+              <figure class="hotel-picture pull-left"><a href="mobile/hotel-detail.html"><img src="img/destinations/hotel02.jpg" alt=""></a></figure>
+              <div class="hotel-meta pull-left"><a href="mobile/hotel-detail.html">
+                  <div class="hotel-name f-bold text-u-c">W RETREAT & SPA BALI</div></a>
                 <div class="info-extra"><span class="locationan inline m-r-sm pull-left text-u-c">SEMINYAK</span><span class="hotel-rating b-l bg-white pull-left"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span>
                   <div class="clearfix"></div>
                 </div>
@@ -106,9 +106,9 @@
               <div class="clearfix"></div>
             </div>
             <div class="hotel-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/hotel01.jpg" alt=""></figure>
-              <div class="hotel-meta pull-left">
-                <div class="hotel-name f-bold text-u-c">Ayana Resort & Spa</div>
+              <figure class="hotel-picture pull-left"><a href="mobile/hotel-detail.html"><img src="img/destinations/hotel01.jpg" alt=""></a></figure>
+              <div class="hotel-meta pull-left"><a href="mobile/hotel-detail.html">
+                  <div class="hotel-name f-bold text-u-c">Ayana Resort & Spa</div></a>
                 <div class="info-extra"><span class="locationan inline m-r-sm pull-left text-u-c">Jimbaran</span><span class="hotel-rating b-l bg-white pull-left"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span>
                   <div class="clearfix"></div>
                 </div>
@@ -120,9 +120,9 @@
               <div class="clearfix"></div>
             </div>
             <div class="hotel-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/hotel03.jpg" alt=""></figure>
-              <div class="hotel-meta pull-left">
-                <div class="hotel-name f-bold text-u-c">Mulia Resort Nusa Dua</div>
+              <figure class="hotel-picture pull-left"><a href="mobile/hotel-detail.html"><img src="img/destinations/hotel03.jpg" alt=""></a></figure>
+              <div class="hotel-meta pull-left"><a href="mobile/hotel-detail.html">
+                  <div class="hotel-name f-bold text-u-c">Mulia Resort Nusa Dua</div></a>
                 <div class="info-extra"><span class="locationan inline m-r-sm pull-left text-u-c">Nusa Dua/Benoa</span><span class="hotel-rating b-l bg-white pull-left"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span>
                   <div class="clearfix"></div>
                 </div>
@@ -134,9 +134,9 @@
               <div class="clearfix"></div>
             </div>
             <div class="hotel-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/hotel02.jpg" alt=""></figure>
-              <div class="hotel-meta pull-left">
-                <div class="hotel-name f-bold text-u-c">W RETREAT & SPA BALI</div>
+              <figure class="hotel-picture pull-left"><a href="mobile/hotel-detail.html"><img src="img/destinations/hotel02.jpg" alt=""></a></figure>
+              <div class="hotel-meta pull-left"><a href="mobile/hotel-detail.html">
+                  <div class="hotel-name f-bold text-u-c">W RETREAT &amp; SPA BALI</div></a>
                 <div class="info-extra"><span class="locationan inline m-r-sm pull-left text-u-c">SEMINYAK</span><span class="hotel-rating b-l bg-white pull-left"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span>
                   <div class="clearfix"></div>
                 </div>
@@ -148,9 +148,9 @@
               <div class="clearfix"></div>
             </div>
             <div class="hotel-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/hotel01.jpg" alt=""></figure>
-              <div class="hotel-meta pull-left">
-                <div class="hotel-name f-bold text-u-c">Ayana Resort & Spa</div>
+              <figure class="hotel-picture pull-left"><a href="mobile/hotel-detail.html"><img src="img/destinations/hotel01.jpg" alt=""></a></figure>
+              <div class="hotel-meta pull-left"><a href="mobile/hotel-detail.html">
+                  <div class="hotel-name f-bold text-u-c">Ayana Resort & Spa</div></a>
                 <div class="info-extra"><span class="locationan inline m-r-sm pull-left text-u-c">Jimbaran</span><span class="hotel-rating b-l bg-white pull-left"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span>
                   <div class="clearfix"></div>
                 </div>
