--- a/app/mobile/hotels.html
+++ b/app/mobile/hotels.html
@@ -69,43 +69,43 @@
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Kilamanjaru.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Surabaya</a></h4><span class="inline count-accomodations">125</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg"><a href="mobile/hotel-detail.html">Surabaya</a></h4><span class="inline count-accomodations">125</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Tokyo.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Tokyo</a></h4><span class="inline count-accomodations">185</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg"><a href="mobile/hotel-detail.html">Tokyo</a></h4><span class="inline count-accomodations">185</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Bali-02.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Bali</a></h4><span class="inline count-accomodations">205</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg"><a href="mobile/hotel-detail.html">Bali</a></h4><span class="inline count-accomodations">205</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Singapore.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Singapore</a></h4><span class="inline count-accomodations">145</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg"><a href="mobile/hotel-detail.html">Singapore</a></h4><span class="inline count-accomodations">145</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Hongkong.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Hongkong</a></h4><span class="inline count-accomodations">85</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg"><a href="mobile/hotel-detail.html">Hongkong</a></h4><span class="inline count-accomodations">85</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/london.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">London</a></h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg"><a href="mobile/hotel-detail.html">London</a></h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Paris.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Paris</a></h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg"><a href="mobile/hotel-detail.html">Paris</a></h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
         </div>
