--- a/app/tour-detail.html
+++ b/app/tour-detail.html
@@ -337,7 +337,7 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="wrapper-md bg-gray"><a href="#" class="btn btn-white m-t-xs">See Document Details</a></div>
+                  <div class="wrapper-md bg-gray"><a href="#" data-toggle="modal" data-target="#documentDetail" class="btn btn-white m-t-xs">See Document Details</a></div>
                 </div>
               </div>
             </div>
@@ -351,12 +351,37 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="wrapper-md bg-gray"><a href="#" class="btn btn-white m-t-xs">See Document Details</a></div>
+                  <div class="wrapper-md bg-gray"><a href="#" data-toggle="modal" data-target="#documentDetail" class="btn btn-white m-t-xs">See Document Details</a></div>
                 </div>
               </div>
             </div>
           </div>
           <div class="clearfix"></div>
+          <div id="documentDetail" tabindex="-1" role="dialog" aria-labelledby="documentDetailLabel" class="modal fade">
+            <div role="document" class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body m-t-md m-b-md">
+                  <h4 id="documentDetailLabel" class="modal-title text-u-c m-l-lg m-b-md f-bold">Dokumen yang dibutuhkan</h4>
+                  <ol class="m-b-md">
+                    <li class="m-b">Passport Asli (Lama &amp; Baru, Berlaku Diatas 6 Bulan)</li>
+                    <li class="m-b">Foto 3 Lembar Berwarna Ukuran 3,5 X 4,5 Latar Belakang Putih</li>
+                    <li class="m-b">Surat Sponsor</li>
+                    <li class="m-b">Surat Referensi Bank</li>
+                    <li class="m-b">Fotocopy Bukti Keuangan (3 Bulan Terakhir)</li>
+                    <li class="m-b">Fotocopy SIUP (Jika Pemilik)</li>
+                    <li class="m-b">Fotocopy KK</li>
+                    <li class="m-b">Fotocopy KTP</li>
+                    <li class="m-b">Fotocopy Akte Lahir</li>
+                    <li class="m-b">Fotocopy Surat Ganti Nama (Jika Ada)</li>
+                    <li class="m-b">Konfirmasi Hotel</li>
+                    <li class="m-b">Print Out Tiket</li>
+                    <li class="m-b">Asuransi Perjalanan</li>
+                    <li class="m-b">Tidak Boleh Ada PENDUL ( ALAMAT PENDUDUK LUAR )</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="visa-doc-info m-t-xl">
             <ul>
               <li>
