flight booking step 3 for mobile

--- a/app/mobile/hotel-show-prices.html
+++ b/app/mobile/hotel-show-prices.html
@@ -93,7 +93,7 @@
           </div>
           <div class="room-card-items">
             <div class="room-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/room01.jpg" alt=""><a href="mobile/flight-return-results.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
+              <figure class="hotel-picture pull-left"><img src="img/destinations/room01.jpg" alt=""><a href="mobile/hotel-booking-1.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
               <div class="hotel-meta pull-left">
                 <div class="hotel-name f-bold text-u-c text-14px">Superior Golf King</div><a href="mobile/hotel-detail.html" class="block m-b-xs m-t-xs">
                   <div class="info-kamar text-orange">Lihat info kamar ini</div></a>
@@ -108,7 +108,7 @@
               <div class="clearfix"></div>
             </div>
             <div class="room-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/room02.jpg" alt=""><a href="mobile/flight-return-results.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
+              <figure class="hotel-picture pull-left"><img src="img/destinations/room02.jpg" alt=""><a href="mobile/hotel-booking-1.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
               <div class="hotel-meta pull-left">
                 <div class="hotel-name f-bold text-u-c text-14px">Superior Golf Twin</div><a href="mobile/hotel-detail.html" class="block m-b-xs m-t-xs">
                   <div class="info-kamar text-orange">Lihat info kamar ini</div></a>
@@ -123,7 +123,7 @@
               <div class="clearfix"></div>
             </div>
             <div class="room-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/room03.jpg" alt=""><a href="mobile/flight-return-results.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
+              <figure class="hotel-picture pull-left"><img src="img/destinations/room03.jpg" alt=""><a href="mobile/hotel-booking-1.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
               <div class="hotel-meta pull-left">
                 <div class="hotel-name f-bold text-u-c text-14px">Junior Suite</div><a href="mobile/hotel-detail.html" class="block m-b-xs m-t-xs">
                   <div class="info-kamar text-orange">Lihat info kamar ini</div></a>
@@ -138,7 +138,7 @@
               <div class="clearfix"></div>
             </div>
             <div class="room-card pos-rlt">
-              <figure class="hotel-picture pull-left"><img src="img/destinations/room04.jpg" alt=""><a href="mobile/flight-return-results.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
+              <figure class="hotel-picture pull-left"><img src="img/destinations/room04.jpg" alt=""><a href="mobile/hotel-booking-1.html" class="block m-t-sm book-btn-sm btn-yellow">BOOK</a></figure>
               <div class="hotel-meta pull-left">
                 <div class="hotel-name f-bold text-u-c text-14px">Ocean Suite</div><a href="mobile/hotel-detail.html" class="block m-b-xs m-t-xs">
                   <div class="info-kamar text-orange">Lihat info kamar ini</div></a>
